tests/error/misc_errors/panic_tag_not_static.err
Error: Operator not defined (at $FILE:7:10)
  | 
5 | @compile_guppy
6 | def foo(y: bool) -> None:
7 |     panic("foo" + "bar", y)
  |           ^^^^^^^^^^^^^ Binary operator `+` not defined for `str` and `str`

Guppy compilation failed due to 1 previous error
